swagger auth added
